jilles      2006/07/10 13:18:22 UTC	(20060710-5836)
  Log:
  Bump trunk version to 1.3.0.
  

  Changes:	Modified:
  +1 -1		trunk/configure.ac (File Modified) 


jilles      2006/07/10 13:06:14 UTC	(20060710-5832)
  Log:
  Port over r5830 from nickserv set to userserv set.
  

  Changes:	Modified:
  +36 -0	trunk/modules/userserv/set.c (File Modified) 


nenolod     2006/07/10 10:30:21 UTC	(20060710-5830)
  Log:
  - don't segfault when passed crap
  

  Changes:	Modified:
  +36 -0	trunk/modules/nickserv/set.c (File Modified) 


jilles      2006/07/09 18:10:01 UTC	(20060709-5826)
  Log:
  Update the release notes.
  

  Changes:	Modified:
  +6 -1		trunk/doc/RELEASE (File Modified) 


jilles      2006/07/09 16:32:21 UTC	(20060709-5820)
  Log:
  vhost help files: vhosts apply on login, not on connect
  

  Changes:	Modified:
  +1 -1		trunk/help/nickserv/vhost (File Modified) 
  +1 -1		trunk/help/userserv/vhost (File Modified) 


beu         2006/07/09 16:29:21 UTC	(20060709-5818)
  Log:
  Synchronise userserv and nickserv help files.
  

  Changes:	Modified:
  +1 -1		trunk/help/nickserv/logout (File Modified) 
  +1 -1		trunk/help/nickserv/set_emailmemos (File Modified) 
  +1 -2		trunk/help/nickserv/set_password (File Modified) 
  +4 -3		trunk/help/userserv/drop (File Modified) 
  +2 -2		trunk/help/userserv/info (File Modified) 
  +4 -1		trunk/help/userserv/register (File Modified) 
  +0 -1		trunk/help/userserv/verify (File Modified) 
  +6 -5		trunk/help/userserv/vhost (File Modified) 


jilles      2006/07/09 16:05:52 UTC	(20060709-5812)
  Log:
  Remove last bold Example(s): from help files.
  

  Changes:	Modified:
  +3 -3		trunk/help/oservice/akill (File Modified) 
  +1 -1		trunk/help/oservice/ignore (File Modified) 


beu         2006/07/09 15:22:57 UTC	(20060709-5810)
  Log:
  Spelling/grammatical fixes.
  

  Changes:	Modified:
  +1 -1		trunk/help/nickserv/drop (File Modified) 
  +1 -1		trunk/help/oservice/akill (File Modified) 

