@@ -1,3 +1,12 @@
+jilles      2006/07/10 13:18:50 UTC	(20060710-5838)
+  Log:
+  Rerun autoconf.
+  
+
+  Changes:	Modified:
+  +11 -11	trunk/configure (File Modified) 
+
+
 jilles      2006/07/10 13:18:22 UTC	(20060710-5836)
   Log:
   Bump trunk version to 1.3.0.
